<resources>
    <string name="app_name">PAYMENT CALCULATOR</string>
    <string name="action_settings">Settings</string>
    <string name="basicpay">BASIC PAY:</string>
    <string name="breakdown">BREAKDOWN</string>
    <string name="benefits">NO CASH BENEFITS</string>
    <string name="pension">NSSF PENSION</string>
    <string name="insurance_cover">INSURANCE COVER</string>
    <string name="net_pay">NET PAY</string>
</resources>
