<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical"
        android:paddingTop="?actionBarSize"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/grosspay"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:text="@string/basicpay"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/basicpay"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/self"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:text="SELF-EMPLOYED"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <CheckBox
                android:id="@+id/selfinput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/no-cash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:text="@string/benefits"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <EditText
                android:id="@+id/nocash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/pension"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:text="@string/pension"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/penout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                android:textStyle="normal"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/insurance"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:text="@string/insurance_cover"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/cover"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="?actionBarSize"
                android:gravity="center"
                android:textStyle="normal"
                android:textSize="18sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/resultshead"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/net_pay"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_alignParentBottom="true"
            >

            <TextView
                android:id="@+id/nssf"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="00.00"


                />
            <TextView
                android:id="@+id/breakdown"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/breakdown"
                android:background="@color/colorPrimary"
                android:textColor="@color/cardview_light_background"
                />
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
